# gem_seller_bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  settings.py
keyboads/: __init__.py  common_keyboard.py
routers/: __init__.py
routers/commands/: __init__.py  base_commands.py
routers/survey/: __init__.py  handlers.py  states.py
utils/: __init__.py  calculate_summ.py  extantion_quantyty.py
